# raytris

./: .clangd  .gitignore  CMakeLists.txt  README.md  build.gradle.kts  gradle.properties  mise.toml  settings.gradle.kts
src/main/: AndroidManifest.xml
src/main/c/: rayexample.c  rayexample.cpp
src/main/java/retrolunar/tris/: MainActivity.java
src/main/res/layout/: activity_main.xml
src/main/res/values/: themes.xml
